# dynamic_sampled_softmax_loss

./: .gitignore  CMakeLists.txt  README.md  __init__.py  dynamic_candidate_sampler_ops.cc  dynamic_candidate_sampling_example.py  dynamic_candidate_sampling_ops.cc  dynamic_range_sampler.cc  dynamic_range_sampler.h  dynamic_sampled_softmax_loss.py
